# Xiaomi-Mijia-Bluetooth-Temperature-and-Humidity-Sensor

./: .gitignore  CMakeLists.txt  README.md  oui.c  scanBeacons.c
bluez_OLD/: Makefile_OLD
cmake/modules/: version.c.in
include/: version.h
java/: CMakeLists.txt
java/com/gpaglia/bluetooth/exp/jni/: CMakeLists.txt  callc.c
java/com/gpaglia/bluetooth/exp/test/: JniExample1.java  ThreadExample.java
java/com/gpaglia/bluetooth/lescan/api/: AbstractScanner.java  DeviceAddress.java  DiscoveryType.java  HCIException.java  ScanHandle.java  ScanInfoCallback.java  ScanType.java  Scanner.java  ScannerException.java  ScannerFactory.java  ScannerManager.java
java/com/gpaglia/bluetooth/lescan/hci/: HciScannerManager.java
java/com/gpaglia/bluetooth/lescan/impl/: ScanHandleImpl.java  ScannerImpl.java
java/jni/: CMakeLists.txt_TMP  com_gpaglia_bluetooth_lescan_impl_ScannerImpl.h
java/jni/exp/: CMakeLists.txt  callc.c  callc.h
java/src/com/gpaglia/bluetooth/exp/test/: JniExample1.java  JniExample2.java  JniExample3.java  ThreadExample.java
java/src/com/gpaglia/bluetooth/lescan/api/: ScannerManagerFactory.java
java/src/com/gpaglia/bluetooth/lescan/hci/: HCIException.java  HciScanner.java  HciScannerManager.java
jniexp/: CMakeLists.txt_OLD  jniexp.c
lescan/: CMakeLists.txt  lescan.c
scanBeacons/: CMakeLists.txt  scanBeacons.c
scanMijia/: CMakeLists.txt  scanMijia.c
src/: scanBeacons.c
